    with some code cleanups by Wengier.
  - Updated the Windows installer to add a page for
    new users to select a video system output - the
    default output (Direct3D on SDL1 builds / standard
    OpenGL on x86/x64 SDL2 builds), OpenGL output with
    pixel-perfect scaling for improved image quality,
    and the TrueType font (TTF) output. (Wengier)
  - Added abliity to resolve file paths that include
    environment variables on Windows or tildes (~) on
    other platforms for various options in the config
    file, such as language and mapper file paths, MT32
    ROM & FluidSynth soundfont paths, [config] section
    options as well as file outputs for the printing
    and serial/parallel port functions. (Wengier)
  - Added calculator for DOS (EVAL.EXE), which appears
    on Z drive and can calculate both simple (such as
    sin(0) and cos(0)) and many advanced mathematical
    expressions in either command-line mode and or the
    interactive mode. (Wengier)
  - Added support for standard (VGA/EGA/CGA) and mono
    mode dual-screen setup by porting the patch. You
    can now start DOSBox-X with the option -display2
    followed by a color (white, green, amber) to enable
    this feature on debug builds. (Wengier)
  - You can now translate texts in DOSBox-X's drop-down
    menus. The message files as written by the config
    tool (CLI or GUI) will contain the menu texts for
    translations from the English language. (Wengier)
  - Added "file access tries" config option (in [dos]
    section) so that if a positive integer is provided
    (e.g. 1 or 3) DOSBox-X will try to read/write/lock
    files on mounted local drives for the specified
    number of times before failing on Windows builds.
    It is especially useful for networked DOS database
    applications that require record locking. (Wengier)
  - Added "bannercolortheme" config option (in [dosbox]
    section) so that users can change the background